tests/spec/parse/snapshots/format_string_with_slice_literal_on_next_line.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() -> Slice<string> {
    let name = "test"
    let msg = f"items for {name}"
    [msg, msg + "2"]
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Constructor {
            name: "Slice",
            params: [
                Constructor {
                    name: "string",
                    params: [],
                    span: Span {
                        file_id: 0,
                        byte_offset: 20,
                        byte_length: 6,
                    },
                },
            ],
            span: Span {
                file_id: 0,
                byte_offset: 14,
                byte_length: 13,
            },
        },
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "name",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 36,
                                    byte_length: 4,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Literal {
                            literal: String {
                                value: "test",
                                raw: false,
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 43,
                                byte_length: 6,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 32,
                            byte_length: 17,
                        },
                    },
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "msg",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 56,
                                    byte_length: 3,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Literal {
                            literal: FormatString(
                                [
                                    Text(
                                        "items for ",
                                    ),
                                    Expression(
                                        Identifier {
                                            value: "name",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 75,
                                                byte_length: 4,
                                            },
                                            resolution: Unresolved,
                                        },
                                    ),
                                ],
                            ),
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 62,
                                byte_length: 19,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 52,
                            byte_length: 29,
                        },
                    },
                    Literal {
                        literal: Slice(
                            [
                                Identifier {
                                    value: "msg",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 85,
                                        byte_length: 3,
                                    },
                                    resolution: Unresolved,
                                },
                                Binary {
                                    operator: Addition,
                                    left: Identifier {
                                        value: "msg",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 90,
                                            byte_length: 3,
                                        },
                                        resolution: Unresolved,
                                    },
                                    right: Literal {
                                        literal: String {
                                            value: "2",
                                            raw: false,
                                        },
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 96,
                                            byte_length: 3,
                                        },
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 90,
                                        byte_length: 9,
                                    },
                                },
                            ],
                        ),
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 84,
                            byte_length: 16,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 28,
                    byte_length: 74,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 101,
        },
    },
]
