tests/spec/parse/snapshots/format_string_with_tuple_on_next_line.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test1() -> (int, string) {
    let a = 10
    let b = f"hello {a}"
    (a, b)
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test1",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 5,
        },
        generics: [],
        params: [],
        return_annotation: Tuple {
            elements: [
                Constructor {
                    name: "int",
                    params: [],
                    span: Span {
                        file_id: 0,
                        byte_offset: 16,
                        byte_length: 3,
                    },
                },
                Constructor {
                    name: "string",
                    params: [],
                    span: Span {
                        file_id: 0,
                        byte_offset: 21,
                        byte_length: 6,
                    },
                },
            ],
            span: Span {
                file_id: 0,
                byte_offset: 15,
                byte_length: 13,
            },
        },
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "a",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 37,
                                    byte_length: 1,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Literal {
                            literal: Integer {
                                value: 10,
                                text: None,
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 41,
                                byte_length: 2,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 33,
                            byte_length: 10,
                        },
                    },
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "b",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 50,
                                    byte_length: 1,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Literal {
                            literal: FormatString(
                                [
                                    Text(
                                        "hello ",
                                    ),
                                    Expression(
                                        Identifier {
                                            value: "a",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 63,
                                                byte_length: 1,
                                            },
                                            resolution: Unresolved,
                                        },
                                    ),
                                ],
                            ),
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 54,
                                byte_length: 12,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 46,
                            byte_length: 20,
                        },
                    },
                    Tuple {
                        elements: [
                            Identifier {
                                value: "a",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 70,
                                    byte_length: 1,
                                },
                                resolution: Unresolved,
                            },
                            Identifier {
                                value: "b",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 73,
                                    byte_length: 1,
                                },
                                resolution: Unresolved,
                            },
                        ],
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 69,
                            byte_length: 6,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 29,
                    byte_length: 48,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 76,
        },
    },
]
